--- a/multi-sweep.toml
+++ b/multi-sweep.toml
@@ -1,8 +1,8 @@
 # Sample multi-sweep configuration file
 
-# name = "experiment-1"                            # unused for now
-# base-folder = "~/path/to/experiment/" # folder to save the results
-# number-of-scans = 5000                            #This affects how long the program runs for.
+# name = "experiment-1"                # unused for now
+# base-folder = "~/path/to/experiment" # folder to save the results
+# number-of-scans = 5000               # this affects how long the program runs for.
 # [laser]
 # with-n77 = true
 # is-oband = false
